--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 <body>
 
 <nav>
-  <div class="logo"><span><img src="/storage/emulated/0/pictures/screenshot/1768903549272.jpg" width=400></span></div>
+  <div class="logo"><span><img src="logo.jpg" width=400></span></div>
   <div>
     <a href="#home">Home</a>
     <a href="#services">Services</a>
