--- a/index.html
+++ b/index.html
@@ -239,16 +239,19 @@
   </p>
 </section>
 
-<div class="cta">
-  <h2>Your First Step to Digital Success</h2>
-  <a href="#contact" class="btn">Contact Us</a>
+<div style="margin-top:30px; text-align:center;">
+  <p><strong>Email:</strong> israelmel304@gmail.com</p>
+  <p><strong>Phone:</strong> +251 905 532 087</p>
+  <p><strong>Address:</strong> Addis Ababa, Ethiopia</p>
 </div>
+
 
 <footer>
   © 2026 StepOne Digital. All Rights Reserved.
 </footer>
 
-<a href="https://wa.me/251905532087" class="whatsapp" target="_blank">WhatsApp</a>
+<a href="https://wa.me/251905532087
+" class="whatsapp" target="_blank">WhatsApp</a>
 
 </body>
 </html>
