--- a/index.html
+++ b/index.html
@@ -239,11 +239,22 @@
   </p>
 </section>
 
-<div style="margin-top:30px; text-align:center;">
-  <p><strong>Email:</strong> israelmel304@gmail.com</p>
-  <p><strong>Phone:</strong> +251 905 532 087</p>
-  <p><strong>Address:</strong> Addis Ababa, Ethiopia</p>
-</div>
+<!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/mdazzkqr"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 
 
 <footer>
