--- a/index.html
+++ b/index.html
@@ -231,30 +231,87 @@
     <div class="card"><h3>Grow</h3><p>Launch, optimize, and scale</p></div>
   </div>
 </section>
+<section id="contact" style="padding:100px 20px;background:linear-gradient(135deg,#020617,#0b1f4b);color:#fff;">
+<div style="max-width:1100px;margin:auto;">
+<h2 style="text-align:center;font-size:40px;margin-bottom:12px;">Let’s Work Together</h2>
+<p style="text-align:center;color:#c7d2fe;margin-bottom:60px;max-width:700px;margin-left:auto;margin-right:auto;">Have a project in mind? Fill out the form and our team will get back to you within 24 hours.</p>
 
-<section id="contact">
-  <h2>Ready to Grow Your Business?</h2>
-  <p style="text-align:center; max-width:700px; margin:auto;">
-    Take the first step today with StepOne Digital. Contact us for a free consultation and let’s build your digital success.
-  </p>
-</section>
 
-<!-- modify this form HTML and place wherever you want your form -->
-<form
+<div style="display:grid;grid-template-columns:repeat(auto-fit,minmax(300px,1fr));gap:50px;align-items:center;">
+
+
+<!-- Improved Modern Contact Form -->
+<form action=<form
   action="https://formspree.io/f/mdazzkqr"
   method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
+> method="POST" style="background:#ffffff;color:#020617;padding:45px;border-radius:20px;box-shadow:0 30px 60px rgba(0,0,0,0.35);">
+
+
+<div style="display:grid;grid-template-columns:1fr 1fr;gap:20px;">
+<div>
+<label style="font-weight:600;font-size:14px;">Full Name</label>
+<input type="text" name="name" placeholder="John Doe" required style="width:100%;padding:14px;margin-top:6px;border-radius:10px;border:1px solid #e5e7eb;" />
+</div>
+<div>
+<label style="font-weight:600;font-size:14px;">Email Address</label>
+<input type="email" name="email" placeholder="john@email.com" required style="width:100%;padding:14px;margin-top:6px;border-radius:10px;border:1px solid #e5e7eb;" />
+</div>
+  </div>
+
+
+<div style="margin-top:22px;">
+<label style="font-weight:600;font-size:14px;">Service Needed</label>
+<select name="service" required style="width:100%;padding:14px;margin-top:6px;border-radius:10px;border:1px solid #e5e7eb;">
+<option value="">Select a service</option>
+<option>Website Development</option>
+<option>Branding & Identity</option>
+<option>Digital Marketing</option>
+<option>UI/UX Design</option>
+</select>
+</div>
+
+
+<div style="margin-top:22px;">
+<label style="font-weight:600;font-size:14px;">Your Message</label>
+<textarea name="message" rows="5" placeholder="Tell us about your project, goals, and timeline..." required style="width:100%;padding:14px;margin-top:6px;border-radius:10px;border:1px solid #e5e7eb;"></textarea>
+</div>
+
+
+<button type="submit" style="width:100%;margin-top:30px;padding:18px;background:linear-gradient(135deg,#2563eb,#1d4ed8);color:#fff;border:none;border-radius:14px;font-size:16px;font-weight:bold;cursor:pointer;">Send Message</button>
+
+
+<p style="text-align:center;font-size:13px;color:#6b7280;margin-top:14px;">We respect your privacy. Your information is safe with us.</p>
 </form>
+
+
+  <div>
+<h3 style="font-size:28px;margin-bottom:16px;">StepOne Digital</h3>
+<p style="color:#c7d2fe;margin-bottom:28px;max-width:420px;">A creative digital agency helping businesses grow through strategy, design, and technology.</p>
+
+
+<div style="margin-bottom:18px;">
+<strong>Email</strong><br />
+israelmel304@gmail.com
+</div>
+<div style="margin-bottom:18px;">
+<strong>Phone</strong><br />
++251 905 532 087
+</div>
+<div style="margin-bottom:18px;">
+<strong>Location</strong><br />
+Ethiopia
+</div>
+
+
+<a href="https://wa.me/251905532087" target="_blank" style="display:inline-block;margin-top:30px;padding:16px 26px;background:#22c55e;color:#fff;border-radius:14px;text-decoration:none;font-weight:bold;">Chat on WhatsApp</a>
+</div>
+
+
+</div>
+</div>
+</section>
+<!-- Contact End -->
+</section>
 
 
 <footer>
