--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
 
 <!-- Improved Modern Contact Form -->
-<form action=<form
+<form action
   action="https://formspree.io/f/mdazzkqr"
   method="POST"
 >
