--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
   action="https://formspree.io/f/mdazzkqr"
   method="POST"
 >
+  <input type="hidden" name="_redirect" value="https://formspree.io/thanks">
 
 <div style="display:grid;grid-template-columns:1fr 1fr;gap:20px;">
 <div>
