--- a/index.html
+++ b/index.html
@@ -245,7 +245,8 @@
   action="https://formspree.io/f/mdazzkqr"
   method="POST"
 >
-  <input type="hidden" name="_redirect" value="https://formspree.io/thanks">
+ <input type="hidden" name="_redirect" value="https://stepone-digital-site.vercel.app/thank-you.html">
+
 
 <div style="display:grid;grid-template-columns:1fr 1fr;gap:20px;">
 <div>
